peac_dev/force-app/main/default/objects/OnBase_Credentials__c/OnBase_Credentials__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>OnBase Credentials</label>
</CustomObject>