peac_dev/force-app/main/default/objects/OnBase_Credentials__c/fields/Add_Document__c.field-meta.xml
<CustomField>
    <fullName>Add_Document__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Add Document</label>
    <length>255</length>
    <type>Text</type>
</CustomField>