peac_dev/force-app/main/default/objects/OnBase_Credentials__c/fields/App_Server_Url__c.field-meta.xml
<CustomField>
    <fullName>App_Server_Url__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>App Server Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>