peac_dev/force-app/main/default/objects/OnBase_Credentials__c/fields/Gateway_Url__c.field-meta.xml
<CustomField>
    <fullName>Gateway_Url__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Gateway Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>