peac_dev/force-app/main/default/objects/OnBase_Credentials__c/fields/Initialization_Vector__c.field-meta.xml
<CustomField>
    <fullName>Initialization_Vector__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Initialization Vector</label>
    <length>255</length>
    <type>Text</type>
</CustomField>