peac_dev/force-app/main/default/objects/OnBase_Credentials__c/fields/Keywords_For_DocTypes__c.field-meta.xml
<CustomField>
    <fullName>Keywords_For_DocTypes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Keywords For DocTypes</label>
    <length>80</length>
    <type>Text</type>
</CustomField>