peac_dev/force-app/main/default/objects/OnBase_Credentials__c/fields/Retrieve_Documents__c.field-meta.xml
<CustomField>
    <fullName>Retrieve_Documents__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Retrieve Documents</label>
    <length>80</length>
    <type>Text</type>
</CustomField>