peac_dev/force-app/main/default/objects/OnBase_Credentials__c/fields/Secret_Key__c.field-meta.xml
<CustomField>
    <fullName>Secret_Key__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Secret Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>